# product-eng-exercise

./: package-lock.json
api/src/: endpoint.ts
apy/: app.py  pyproject.toml
web/: package.json
web/src/: App.tsx  Feedback.tsx  Groups.tsx  hooks.ts
web/src/components/: DataTable.tsx  FeedbackDataTable.tsx  FeedbackFilter.tsx
web/src/utils/: filterData.ts
